--- a/styles/styles.css
+++ b/styles/styles.css
@@ -25,6 +25,7 @@ body {
   overflow: hidden;
 }
 .neon-button:hover{
+  cursor:pointer;
   background: #77e700;
   color: #050801;
   box-shadow: 0 0 5px #77e700,
@@ -103,6 +104,14 @@ body {
       bottom: 100%;
   }
 }
-#middle{
+.middle{
   margin-top: 20vh;
+}
+#hiddenBody{
+  
+}
+.hiddenBody{
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility  0s 2s, opacity 2s linear;
 }
