--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,6 @@
 body {
   background: #111111;
+  color:#FFF;
 }
 .neon {
   text-shadow: 
@@ -108,10 +109,31 @@ body {
   margin-top: 20vh;
 }
 #hiddenBody{
-  
-}
-.hiddenBody{
   visibility: hidden;
   opacity: 0;
   transition: visibility  0s 2s, opacity 2s linear;
 }
+.fade-in{
+  animation: fade-in 2s;
+  animation-timing-function: ease-in;
+}
+@keyframes fade-in {
+  0% {opacity: 0;}
+  100% {opacity: 1;}
+}
+.glassmorph{
+  background: #2121214d;
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5.5px);
+  -webkit-backdrop-filter: blur(5.5px);
+  border: 1px solid #2121214d;
+}
+.neon-text{
+  color: #77e700;
+  text-shadow:
+    0 0 5px #77e700,
+    0 0 25px #77e700,
+    0 0 50px #77e700,
+    0 0 200px #77e700;
+  }
