--- a/styles/styles.css
+++ b/styles/styles.css
@@ -127,7 +127,9 @@ body {
 }
 #hiddenBody{
   visibility: hidden;
-  opacity: 0;
+}
+.revealOnScroll{
+  visibility: hidden;
 }
 .fade-in{
   visibility: visible;
@@ -138,6 +140,18 @@ body {
   display: none;
   opacity: 0;
   transition: opacity 1.5s ease-in-out;
+}
+.fade-in-bottom{
+  animation-name: fade-in-bottom;
+  animation-duration: 0.65s;
+  animation-timing-function: ease-in-out;
+}
+@keyframes fade-in-bottom {
+  from {
+      opacity: 0;
+      transform: translateY(500%);
+  }
+  to { opacity: 1; transform: translateY(0); }
 }
 @keyframes blink {50% { color: transparent }}
 .loader__dot { animation: 1.5s blink infinite }
